tests/NormalTests/paczka1/fuzzy1/31603003.err
Error in line 1: ee8I S928 48,3
Error in line 8: A183 S928 56,3
Error in line 12: 6yO A183 -4,5
Error in line 9: 6yO A183 88,1
Error in line 22: pK6vP S102 21,8
Error in line 27: pK6vP A347 61,0
Error in line 25: qoC4wVdDg6 S928 6,5
Error in line 30: qoC4wVdDg6 A183 92,9
Error in line 32: 6yO A183 34,6
